--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "geist": "^1.3.1",
     "lucide-react": "^0.469.0",
     "motion": "^11.15.0",
     "next": "15.1.0",
