--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "velite && next dev --turbopack",
     "build": "velite && next build",
     "start": "velite && next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format:check": "prettier --check \"**/*.{js,ts,tsx,md,mdx}\"",
+    "format:fix": "prettier --write \"**/*.{js,ts,tsx,md,mdx}\"",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -29,6 +32,7 @@
     "motion": "^11.15.0",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
+    "prettier": "^3.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-wrap-balancer": "^1.1.1",
